# MicroPython_Claude_Assistant_Public

./: .gitignore  README.md  README_EN.md  pyproject.toml  settings.json  setup_tool_guide.md  setup_tool_guide_EN.md  skill.md  skill_EN.md
daemon/: __init__.py  ble_daemon.py  hook_bridge.py  pair_device.py  risk_config.py  smoke.py  transport.py
device/: char_among_us.mpy  char_cat.mpy  char_creeper.mpy  char_custom.mpy  char_ghost.mpy  char_kirby.mpy  char_pikachu.mpy  char_robot.mpy  character.mpy  config.py  display_renderer.mpy  light_renderer.mpy  logo_data.mpy  main.py  protocol.mpy  queue.mpy  renderer.mpy  rotating_logger.mpy  session_manager.mpy  state.mpy  transport.mpy  vibration.mpy  voice_task.mpy
device/assets/: bv701-1.2-1.6-1.5-8000-connect-01.pcm  bv701-1.2-1.6-1.5-8000-disconnect-01.pcm  bv701-1.2-1.6-1.5-8000-done-01.pcm  bv701-1.2-1.6-1.5-8000-done-02.pcm  bv701-1.2-1.6-1.5-8000-done-03.pcm  bv701-1.2-1.6-1.5-8000-done-04.pcm  bv701-1.2-1.6-1.5-8000-error-01.pcm  bv701-1.2-1.6-1.5-8000-error-02.pcm  bv701-1.2-1.6-1.5-8000-error-03.pcm  bv701-1.2-1.6-1.5-8000-error-04.pcm  bv701-1.2-1.6-1.5-8000-idle-01.pcm  bv701-1.2-1.6-1.5-8000-pending-01.pcm  bv701-1.2-1.6-1.5-8000-pending-02.pcm  bv701-1.2-1.6-1.5-8000-pending-03.pcm  bv701-1.2-1.6-1.5-8000-pending-04.pcm  bv701-1.2-1.6-1.5-8000-startup-01.pcm  bv701-1.2-1.6-1.5-8000-working-01.pcm  bv701-1.2-1.6-1.5-8000-working-02.pcm  bv701-1.2-1.6-1.5-8000-working-03.pcm  (+1 more)
docs/: settings.json.example  state_machine.md
firmware/: README.md
hooks/: hooks.json
plugin_plan/: PLAN.md
(+3 files in other folders)
