[project]
name = "claude-buddy"
version = "0.1.0"
description = "Claude Buddy desktop pet daemon + hook bridge for Claude Code / Codex CLI"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "bleak>=0.21",
    "esptool>=4.7",
    "mpremote>=1.22",
    "pyserial>=3.5",
    "volcengine-tts-v1-ws>=0.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "mpy-cross>=1.22",  # 可选：将 .py 编译为 .mpy 字节码，减小固件体积
]

[project.scripts]
claude-buddy-daemon = "daemon.ble_daemon:main"
claude-buddy-hook-bridge = "daemon.hook_bridge:main"
claude-buddy-smoke = "daemon.smoke:main"
claude-buddy-pair = "daemon.pair_device:main"

[tool.hatch.build.targets.wheel]
packages = ["daemon"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
